--- a/lg_ai/pubspec.yaml
+++ b/lg_ai/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dartssh2: ^2.12.0
   flutter_dotenv: ^5.2.1
   google_fonts: ^6.2.1
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
