--- a/liquid_galaxy_flutter_app/pubspec.yaml
+++ b/liquid_galaxy_flutter_app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_fonts: ^6.2.1
   http: ^1.3.0
   lottie: ^3.3.1
+  flutter_tts: ^4.2.2
 
 dev_dependencies:
   flutter_test:
