--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node --watch index.js",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@genkit-ai/express": "^1.7.0",
+    "@genkit-ai/googleai": "^1.7.0",
+    "genkit": "^1.7.0"
+  }
 }
